swagger添加测试接口
